--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
